Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12830

QGraphicsWidgets doesn't show up on FlickableItems

    XMLWordPrintable

Details

    • b83c295650b3f28bc9da542acf4652f4ce2d168b

    Description

      If you put a QGraphicsWidget inside a Flickable item it doesn't show up. Wrapping it with an Item{} solves the issue and then it shows up.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            artsouza Artur de Souza (MoRpHeUz)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes