Handle QGraphicsWidgets in Flickable

Task-number: QTBUG-12830
Reviewed-by: Michael Brasser